// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleListPage should render Empty List whith filter when no elements and snap 1`] = `
<div>
  <div
    class="makeStyles-root-378"
  >
    <div
      aria-label="rule search bar"
      class="makeStyles-searchBar-379"
    >
      <div
        class="MuiPaper-root makeStyles-searchContainer-384 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiInputBase-root makeStyles-searchInput-385"
        >
          <input
            aria-label="search input"
            class="MuiInputBase-input"
            placeholder="Enter a rule name..."
            type="text"
            value="rule-name"
          />
        </div>
        <div
          aria-label="search icon"
          class="makeStyles-searchButton-386"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
      </div>
    </div>
    <button
      aria-label="add rule"
      class="MuiButtonBase-root MuiFab-root makeStyles-fabAddRule-381 MuiFab-primary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiFab-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div
      class="makeStyles-gridCards-380"
    />
    <div
      class="makeStyles-emptyView-390"
      data-testid="empty-view-row"
    >
      <h4
        class="MuiTypography-root makeStyles-emptyViewText-391 MuiTypography-h4 MuiTypography-alignCenter"
      >
        There are no elements for "rule-name"
      </h4>
    </div>
  </div>
</div>
`;

exports[`RuleListPage should render loading component 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      aria-label="rule search bar"
      class="makeStyles-searchBar-2"
    >
      <div
        class="MuiPaper-root makeStyles-searchContainer-7 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiInputBase-root makeStyles-searchInput-8"
        >
          <input
            aria-label="search input"
            class="MuiInputBase-input"
            placeholder="Enter a rule name..."
            type="text"
            value=""
          />
        </div>
        <div
          aria-label="search icon"
          class="makeStyles-searchButton-9"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
      </div>
    </div>
    <button
      aria-label="add rule"
      class="MuiButtonBase-root MuiFab-root makeStyles-fabAddRule-4 MuiFab-primary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiFab-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div
      class="makeStyles-gridCards-3"
    />
    <div
      class="makeStyles-loadingView-10"
      data-testid="loading-view-row"
    >
      <div
        class="MuiCircularProgress-root makeStyles-loadingSpinner-11 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
